patient info => faq

--- a/aboutDrBrint.html
+++ b/aboutDrBrint.html
@@ -148,7 +148,8 @@
     					<li><a href="cataracts.html">CATARACTS</a></li>
     					<li><a href="aboutDrSinger.html">ABOUT DR. SINGER</a></li>
     					<li><a href="aboutDrBrint.html">ABOUT DR. BRINT</a></li>
-    					<li><a href="patientInfo.html">PATIENT INFO</a></li>
+    					<li><a href="patientInfo.html">LASIK FAQS</a></li>
+					<li><a href="technology.html">TECHNOLOGY</a></li>
     					<li><a href="contactUs.html">CONTACT US</a></li>
     				</ul>
     			</div>
