--- a/patientInfo.html
+++ b/patientInfo.html
@@ -73,24 +73,327 @@
     		<div id="contentAreaWrapper">
     			<div id="contentArea">
 
-			  <h2>Things You Should Know About LASIK</h2>
+			  <h2>LASIK FAQS</h2>
 
-<p class="autop"><span class="sectionHead">Consultation:</strong> This will determine if you are a candidate for the procedure, and give you the opportunity to ask any questions you may have. In some cases the pre-op examination can be done the same day.</p>
+<h3>Things You Should Know About LASIK with DR. Singer</h3>
 
-<p class="autop"><span class="sectionHead">Pre-op Examination:</span> Once it is determined that you are a candidate for LASIK, the next step is to have a dilated exam. This will allow the doctor to get the appropriate measurements, and make sure your eyes are medically healthy. The dilation will last for the rest of the day, and we recommend you have someone drive you home. Occasionally, a person’s eye may stay dilated for 24- 48 hours.</p>
+<p class="autop"><strong>Consultation:</strong> The consultation is free. This will determine if you are a candidate
+for the procedure, and give you the opportunity to ask any questions you may have. In
+some cases the pre-op examination can be done the same day.</p>
 
-<p class="indent">- Your LASIK procedure will be scheduled at the time of your Pre-op examination, and you will be given pre & postoperative instructions, fee sheet, prescriptions, and consents.</p>
-<p class="indent">- At the time of your Pre-op exam you will pay $150.00, which will go toward the total cost of your procedure. The balance is due the day of the procedure. (Please, refer to the “Excimer Laser Fee” sheet.)</p>
+<p class="autop"><strong>Pre-op Examination:</strong> Once it is determined that you are a candidate for LASIK, the
+next step is to have a dilated exam. This will allow the doctor to get the appropriate
+measurements, and make sure your eyes are medically healthy. The dilation will
+last for the rest of the day, and we recommend you have someone drive you home.
+Occasionally, a person’s eye may stay dilated for 24- 48 hours.</p>
 
-<p class="autop"><span class="sectionHead">2 Weeks Prior:</span> You will need to stop wearing contact lenses 2 weeks prior to your procedure, if you wear soft lens. If you wear toric (soft contact lens which correct astigmatism) you must not wear contacts for 3 weeks. If you wear gas permeable lens you must not wear them 4 weeks prior to your procedure.</p>
+<p class="autop">Your LASIK procedure will be scheduled at the time of your Pre-op examination,
+and you will be given pre & postoperative instructions, fee sheet, prescriptions, and
+consents.</p>
 
-<p class="indent">- Read all of your paper work given to you on your Pre-op visit.</p>
+<p class="autop">Surgical options will be discussed.</p>
 
-<p class="autop"><span class="sectionHead">Procedure Day:</span> You will be here approximately two hours, and you will need someone to drive you home. Plan to sleep the rest of the day. (Please, refer to all written instructions given to you on Pre-op day.)</p>
+<h3>Surgical Options</h3>
 
-<p class="autop"><span class="sectionHead">Post-Op:</span>  You will need to come in the day after your procedure for a quick check-up. You will also need to come in 2-3 weeks, 2-3 months following your procedure. There is no charge for these follow up exams. (Refer to “Excimer Laser Fee” sheet.)</p>
+<ul class="cList">
+  <strong>
+<li>Traditional LASIK ($799/eye)</li>
 
-			  
+<li>Traditional PRK ($799/eye)</li>
+
+<li>Wavefront LASIK (Custom LASIK) - additional $300 per eye READ MORE BELOW</li>
+
+<li>IntraLASIK (Blade-less LASIK) - additional $500 per eye READ MORE BELOW</li>
+</strong>
+</ul>
+
+<p class="autop">At the time of your Pre-op exam you will pay $150.00, which will go toward the total cost of your procedure. The balance is due the day of the procedure. (Please, refer to the “Excimer Laser Fee” sheet.)</p>
+
+<p class="autop"><strong>2 Weeks Prior:</strong> You will need to stop wearing contact lenses 2 weeks prior to your procedure, if you wear soft lens. If you wear toric (soft contact lens which correct astigmatism) you must not wear contacts for 3 weeks. If you wear gas permeable lens you must not wear them 4 weeks prior to your procedure.</p>
+
+<p class="autop">Read all of your paper work given to you on your Pre-op visit.</p>
+
+<p class="autop"><strong>Procedure Day:</strong> You will be here approximately two hours, and you will need someone to drive you home. Plan to sleep the rest of the day. (Please, refer to all written instructions given to you on Pre-op day.)</p>
+
+<p class="autop"><strong>Post-Op:</strong> You will need to come in the day after your procedure for a quick check-up. You will also need to come in 2-3 weeks, 2-3 months following your procedure. There is no charge for these follow up exams during the first six months after surgery. (Refer to “Excimer Laser Fee” sheet.)</p>
+
+<h3>Wavefront CustomVue</h3>
+
+<p class="autop">In order to correct your vision during LASIK, an excimer laser is used to reshape the front
+surface of your cornea. The leading edge technology that is enhancing our ability to perform
+that reshaping process more accurately than ever before is called Custom Wavefront guided
+LASIK. We’d like to explain why Wavefront guidance is such an exciting advance over previous
+methods.</p>
+
+<p class="autop">You’re familiar with the high quality of TV images obtainable using High Definition technology
+compared to standard TV systems. The program content is the same but the image clarity
+is worlds apart. That’s the type of difference that we can observe with Wavefront guidance
+compared to conventional LASIK surgery.</p>
+
+<p class="autop">In the past, the laser was only capable of creating shapes on the cornea that were symmetrical,
+like farsightedness, nearsightedness, and astigmatism. These are the aberrations that are typically
+corrected by wearing glasses. However, once you factor out these simple optical distortions,
+there remain additional complex shapes in the optical system that keep your eyes from seeing
+perfectly. These complexities are called higher order aberrations, and include such things
+as: coma, trefoil, tetrafoil, and spherical aberration to name just a few. These higher order
+aberrations, if not corrected during your LASIK procedure, can still leave you with imperfect
+optics and occasionally glare or halo side effects.</p>
+
+<p class="autop">These higher order aberrations are completely unique to your particular optical system
+and can now be precisely measured using a wavefront measuring device that creates an
+optical “fingerprint” of your visual system. This wavefront analyzer is considered to be nearly
+100 times more accurate than measuring your vision with lenses, as has been the standard in the
+past.</p>
+
+<p class="autop">Most importantly, this wavefront data can be sent to the excimer laser to create an extremely
+complex and accurate wavefront-guided treatment, effectively correcting ALL of the aberrations
+that are present in your visual system. This high-resolution, 3-D, custom wavefront treatment
+allows us to provide you with your optimal best personal vision that often exceeds that of
+glasses, contacts, and older Lasik surgery. Wavefront guidance also provides a higher quality of
+vision, consistently superior night vision, and measurably reduces the chance for needing a laser
+enhancement compared to older conventional non-Wavefront guided treatments. By analogy,
+it is like comparing high definition TV to standard TV – Wavefront guidance delivers superior
+clarity and superior quality.</p>
+
+<div class="staffPicture floatLeft">
+  <img src="images/spherical.jpg">
+  <span id="staffName">Spherical Errors</span>
+</div>
+
+<p class="autop">In the past, laser vision correction has only been
+able to treat nearsightedness, farsightedness,
+and astigmatism. These are considered "simple"
+refractive errors. Nearsightedness and
+farsightedness are basic "spherical" errors. They
+are symmetrical "bowl" shaped distortions that
+can be corrected for using simple glasses using
+symmetical lenses. However, there are many
+other "complex" aberrations or distortions that
+exist within the optical system of the eye.</p>
+
+
+<div class="staffPicture floatLeft">
+  <img src="images/astigmatism.jpg">
+  <span id="staffName">Astigmatism</span>
+</div>
+
+<p class="autop">These distortions occur naturally in all eyes
+in varying degrees. Most eyes have some
+regular astigmatism. Regular astigmatism is
+a symmetrical aberration that is caused by
+distortions that are also "bowl" shaped but the
+bowl is elongated in one meridian like a spoon.</p>
+<div class="clearBoth">&nbsp;</div>
+
+<div class="staffPicture floatLeft">
+  <img src="images/complex.jpg">
+  <span id="staffName">Complex Aberrations</span>
+</div>
+
+<p class="autop">Many people have degraded vision due to
+complex aberrations. These aberrations include
+trefoil, coma, tetrafoil and spherical aberration.
+These aberrations are generally not symmetrical
+and cannot generally be corrected for using
+standard glasses. Even in small amounts these
+aberrations can cause visually significant
+degradation in overall clarity of best-corrected
+vision.</p>
+<div class="clearBoth"></div>
+<img src="images/wavetech.jpg" class="floatRight" />
+<p class="autop">The FDA has approved wavefront-guided LASIK, which automatically
+incorporates the correction of these complex distortions into the
+traditional LASIK procedure. This highly customized treatment is
+based on a wavefront analysis of the eye, which is essentially
+a "fingerprint" of that individual eye's optical system. This detailed
+information is used to help guide the laser.</p>
+
+
+
+<p class="autop">A customized cornea whose optical system has an unparalleled reduction in distortions.
+This dramatic improvement can mean the difference between just barely reading the
+small row of letters on the eye chart and reading it without effort. Many patients have
+reported an improvement in night vision.</p>
+
+<div class="clearBoth"></div>
+
+<h3>How does Wavefront work?</h3>
+
+<p class="autop">Ideally in a perfect eye, all light would come to an exact point of focus on the back of the eye
+at the retina and bounce straight back out in a perfectly flat plane. In reality, all eyes have some
+degree of simple and complex imperfections.
+</p>
+
+<p class="autop">Wavefront measures light that is reflected from the back of your eye out into a wavefront
+analyzer. This WaveScan system separates the broad light into individual points of light that
+can be measured on a microscopic level. Each of these measured points of light results in a
+mathematical formula for the "error" at that exact point at the corneal plane. This data guides the
+ablation (reshaping) of your cornea by the laser.</p>
+
+<h4>Published Wavefront Results</h4>
+
+<ul class="cList">
+  <img src="images/vision.jpg" class="floatRight" />
+<li>6 months after treatment</li>
+
+<li>Before and After Night Vision Improvement as Reported by the Patient</li>
+
+<li>100% of eyes see 20/40 or better</li>
+
+<li>94% of eyes see 20/20 or better</li>
+
+<li>30% of eyes see better without correction after treatment than they did with
+glasses before treatment</li>
+</ul>
+
+<h4>Patients reported subjective improvement in all categories of quality of vision:</h4>
+
+<ul class="cList">
+  <img src="images/satisfaction.jpg" class="floatRight" />
+<li>sharpness</li>
+
+<li>visual comfort (improved 16.5%)</li>
+
+<li>consistency of vision</li>
+
+<li>daytime vision</li>
+
+<li>night vision (improved 20.2%)</li>
+
+<li>night vision glare (improved 21.1%)</li>
+</ul>
+
+<p class="autop">Over 20% of patients who were dissatisfied or very dissatisfied with their night vision before
+treatment were no longer dissatisfied with their night vision after treatment.</p>
+
+<h3>Additional Information about Intra-LASIK (Blade-less LASIK)</h3>
+
+<p class="autop">With the Intralase method, only laser energy is used for the entire LASIK procedure. In contrast, with
+older traditional LASIK, the first step of the procedure is performed using a steel bladed microkeratome
+that slices the eye’s surface.</p>
+
+<p class="autop">How does this Intralase method work? Intralase provides us with the first technology for a truly all-laser,
+blade-free LASIK procedure, replacing the hand-held microkeratome blade historically used in creating
+LASIK corneal flaps -- the first step of the procedure -- with a computer-guided, ultra-fast femtosecond
+(fem-to-second) laser. The IntraLase laser virtually eliminates almost all of the most severe, sight-
+threatening LASIK complications related to use of the microkeratome and, by creating an optimal
+corneal surface below the flap, provides for better visual outcomes -- taking many patients to 20/20
+vision and beyond</p>
+
+<h4>Intralase Facts</h4>
+
+<p class="autop">IntraLase is the first blade-free laser technology for performing the first step of the LASIK procedure:
+
+creating the corneal flap. Prior to IntraLase, this first step was done manually using a hand-held device with
+
+an oscillating metal razor blade, called a microkeratome. While LASIK has proven to be a successful and
+
+relatively safe procedure, the majority of complications with LASIK arise from the use of microkeratomes.
+
+IntraLase makes LASIK safer by replacing the hand-held microkeratome blade with the silent computer-guided
+
+precision of a laser, virtually eliminating severe sight-threatening blade-related LASIK complications as a
+
+result.</p>
+
+<h4>IntraLase Makes LASIK Better</h4>
+
+<p class="autop">IntraLase improves the overall safety profile and visual results of LASIK, be it custom or standard. The
+
+IntraLase laser is dramatically less likely to produce seriously thin flaps or extremely thick flaps, events which
+
+could lead to devastating complications. Clinical studies confirm that patients see better following LASIK with
+
+IntraLase than with the hand-held microkeratome blade. More patients achieved 20/20 or better vision with
+
+IntraLase-initiated LASIK. Patients who stated a preference in a prospective, randomized study preferred
+
+the post-operative vision of their IntraLase-treated eye 3-to-1 over their blade-treated eye. IntraLase created
+
+fewer high- and low-order aberrations, which can be associated with night glare and halos. In several studies,
+
+standard tests performed to diagnose dry eye indicated better results for IntraLase-treated patients. IntraLase
+
+patients required fewer enhancement procedures following LASIK. The precise IntraLase flap significantly
+
+reduces the incidence of post-operative induced astigmatism as compared with microkeratome-created flaps.</p>
+
+<h4>True “All-Laser” LASIK</h4>
+
+<p class="autop">While most commonly associated with the excimer laser, LASIK is not an “all-laser” procedure due to the use
+
+of the microkeratome blade. Only LASIK procedures that use IntraLase for the first step can be considered “all-
+
+laser.” Pulsing at a speed of one-quadrillionth of a second, the ultra-fast IntraLase FS femtosecond (fem-to-
+
+second) laser brings micron-level precision and computer-controlled accuracy to corneal flap creation.</p>
+
+<h4>Making the Flap: How IntraLase Works</h4>
+
+<p class="autop">Unlike the microkeratome blade, which cuts across the cornea to create the flap, IntraLase doesn’t traverse
+
+the cornea; in fact, it never touches the outer cornea but rather creates the flap using an “inside-out” process,
+
+virtually eliminating severe sight-threatening complications as a result. The INTRALASE® FS laser uses
+
+an infrared beam of light to create the flap from below the surface of the cornea. The beam of laser light is
+
+focused to a precise point within the stroma (central layer of the cornea), where a string of tiny 2- to 3-micron
+
+bubbles is formed. Thousands of these microscopic bubbles are precisely positioned to define the flap’s
+
+dimensions and distinct beveled edge, as well as location of the hinge. The process from start to finish takes
+
+approximately 20 seconds. The surgeon then lifts the flap to allow for treatment by the excimer laser. When
+
+treatment is complete, the flap is accurately repositioned, thanks to its beveled edge.
+</p>
+
+<h3>The 5th Generation Intralase LASER</h3>
+
+<img src="images/intra1.jpg" class="floatLeft">
+<img src="images/intracut.jpg" class="floatLeft">
+<img src="images/intra2.jpg" class="floatLeft">
+<div class="clearBoth">&nbsp;</div>
+
+<h3>Traditional LASIK Process</h3>
+<p class="autop"></p>
+<div class="floatLeft" style="text-align: center; background: white;max-width: 165px;">
+<img src="images/mkeratome.jpg" >
+<span style="float:left;clear:both;font-size: 12px;">Prior to the IntraLase
+laser, LASIK’s first step
+was done manually with
+an oscillating razor blade,
+called a microkeratome.
+This device causes
+the majority of LASIK
+complications and can
+be unpredictable even in
+skilled hands.</span>
+</div>
+<img src="images/intra2.jpg" class="floatLeft">
+
+<div class="clearBoth">&nbsp;</div>
+
+<p class="autop">IntraLase is the most sophisticated and accurate technology for corneal flap creation available today, and has
+
+given patients greater confidence in choosing vision correction surgery. The higher degree of assurance and
+
+safety, virtually no risk of severe sight-threatening complications and more predictable outcomes have been
+
+shown to increase patient satisfaction in their LASIK experience and outcome.</p>
+
+<p class="autop">Beyond improving the safety of the procedure, LASIK using the advanced IntraLase Method has been
+shown clinically to deliver better visual outcomes in both standard and Custom LASIK procedures with
+more patients achieving visual acuity of 20/20, 20/15 and even 20/12.5. These remarkable results are
+the product of the optimized corneal surface prepared by the IntraLase FS laser in creating the corneal
+flap. The precision of the laser reduces the microscopic inconsistencies on the corneal bed, providing
+an optimal surface for the vision correction performed by the excimer laser in step two of the LASIK
+procedure.</p>
+
+
+
+
     			</div>
     		</div>
     		<div id="footerWrapper">
@@ -146,7 +449,8 @@
     					<li><a href="cataracts.html">CATARACTS</a></li>
     					<li><a href="aboutDrSinger.html">ABOUT DR. SINGER</a></li>
     					<li><a href="aboutDrBrint.html">ABOUT DR. BRINT</a></li>
-    					<li><a href="patientInfo.html">PATIENT INFO</a></li>
+    					<li><a href="patientInfo.html">LASIK FAQS</a></li>
+					<li><a href="technology.html">TECHNOLOGY</a></li>
     					<li><a href="contactUs.html">CONTACT US</a></li>
     				</ul>
     			</div>
