--- a/aboutDrSinger.html
+++ b/aboutDrSinger.html
@@ -50,11 +50,12 @@
     				<span id="logoText">Jeffrey Singer, M.D., APMC</span>
     				<div id="navBar">
     					<ul>
-    						<li class="currentPage"><a href="index.html">Main</a></li>
+    						<li class="currentPage"><a href="index.html">Home</a></li>
     						<li><a href="lasik.html">About LASIK</a></li>
-    						<li><a href="singerAndStaff.html">Dr. Singer &amp; Staff</a></li>
-    						<li><a href="financing.html">Financing</a></li>
-    						<li><a href="cataracts.html">Cataract Surgery</a></li>
+						<li><a href="patientInfo.html">LASIK FAQS</a></li>
+						<li><a href="technology.html">LASIK Technology</a></li>
+						<li><a href="singerAndStaff.html">Dr. Singer &amp; Staff</a></li>
+						<li><a href="cataracts.html">Cataract Surgery</a></li>
     						
     					</ul>
     				</div>
