--- a/cataracts.html
+++ b/cataracts.html
@@ -51,8 +51,8 @@
     				<h1 id="subLogoText">Louisiana Laser Vision Correction</h1>
     				<div id="navBar">
     					<ul>
-    						<li class="currentPage"><a href="index.html">Home</a></li>
-    						<li><a href="lasik.html">About LASIK</a></li>
+					  <li><a href="index.html">Home</a></li>
+    						<li class="currentPage"><a href="lasik.html">About LASIK</a></li>
 						<li><a href="patientInfo.html">LASIK FAQS</a></li>
 						<li><a href="technology.html">LASIK Technology</a></li>
 						<li><a href="singerAndStaff.html">Dr. Singer &amp; Staff</a></li>
