--- a/patientInfo.html
+++ b/patientInfo.html
@@ -108,7 +108,7 @@ consents.</p>
 </strong>
 </ul>
 
-<p class="autop">At the time of your Pre-op exam you will pay $150.00, which will go toward the total cost of your procedure. The balance is due the day of the procedure. (Please, refer to the “Excimer Laser Fee” sheet.)</p>
+<p class="autop">At the time of your Pre-op exam you will pay $150.00, which will go toward the total cost of your procedure. The balance is due the day of the procedure. (Please, refer to the <a href="excFee.pdf">“Excimer Laser Fee” sheet</a>.)</p>
 
 <p class="autop"><strong>2 Weeks Prior:</strong> You will need to stop wearing contact lenses 2 weeks prior to your procedure, if you wear soft lens. If you wear toric (soft contact lens which correct astigmatism) you must not wear contacts for 3 weeks. If you wear gas permeable lens you must not wear them 4 weeks prior to your procedure.</p>
 
@@ -116,7 +116,7 @@ consents.</p>
 
 <p class="autop"><strong>Procedure Day:</strong> You will be here approximately two hours, and you will need someone to drive you home. Plan to sleep the rest of the day. (Please, refer to all written instructions given to you on Pre-op day.)</p>
 
-<p class="autop"><strong>Post-Op:</strong> You will need to come in the day after your procedure for a quick check-up. You will also need to come in 2-3 weeks, 2-3 months following your procedure. There is no charge for these follow up exams during the first six months after surgery. (Refer to “Excimer Laser Fee” sheet.)</p>
+<p class="autop"><strong>Post-Op:</strong> You will need to come in the day after your procedure for a quick check-up. You will also need to come in 2-3 weeks, 2-3 months following your procedure. There is no charge for these follow up exams during the first six months after surgery. (Refer to <a href="excFee.pdf">“Excimer Laser Fee” sheet</a>.)</p>
 
 <h3>Wavefront CustomVue</h3>
 
