--- a/lasik.html
+++ b/lasik.html
@@ -51,11 +51,12 @@
     				<h1 id="subLogoText">Louisiana Laser Vision Correction</h1>
     				<div id="navBar">
     					<ul>
-    						<li><a href="index.html">Main</a></li>
+					  <li ><a href="index.html">Home</a></li>
     						<li class="currentPage"><a href="lasik.html">About LASIK</a></li>
-    						<li><a href="singerAndStaff.html">Dr. Singer &amp; Staff</a></li>
-    						<li><a href="financing.html">Financing</a></li>
-    						<li><a href="cataracts.html">Cataract Surgery</a></li>
+						<li><a href="patientInfo.html">LASIK FAQS</a></li>
+						<li><a href="technology.html">LASIK Technology</a></li>
+						<li><a href="singerAndStaff.html">Dr. Singer &amp; Staff</a></li>
+						<li><a href="cataracts.html">Cataract Surgery</a></li>
     					</ul>
     				</div>
     				
