--- a/aboutDrSinger.html
+++ b/aboutDrSinger.html
@@ -129,7 +129,7 @@ know someone who has left a comment about their experience. Thank you for taking
     				</div>
  					<div id="footerVideoWrapper">
     				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana LASIK Leader</h1>
-    				<iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w" frameborder="0" allowfullscreen></iframe>
+    				 <iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w?rel=0&amp;loop=1&amp;playlist=T0PsAuUJG7" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
     				<div id="footerVideo"></div>
     				</div>
     				<div id="footerOfficesWrapper">
