--- a/aboutUs.html
+++ b/aboutUs.html
@@ -90,7 +90,7 @@
     				</div>
  					<div id="footerVideoWrapper">
     				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana LASIK Leader</h1>
-    				<iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w" frameborder="0" allowfullscreen></iframe>
+    				 <iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w?rel=0&amp;loop=1&amp;playlist=T0PsAuUJG7" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
     				<div id="footerVideo"></div>
     				</div>
     				<div id="footerOfficesWrapper">
