--- a/aboutDrSinger.html
+++ b/aboutDrSinger.html
@@ -77,8 +77,7 @@
 <h2>A Caring, Qualified Physician</h2>
 			  
 <p class="autop">Hello, I am Dr. Jeffrey Singer and I want to introduce myself and give an overview
-of my practice philosophy. I am filming this in April 2012, and I am 47 years old. I
-have been in private practice in Louisiana since 1994. I attended medical school
+of my practice philosophy. I am 47 years old, and have been in private practice in Louisiana since 1994. I attended medical school
 at the University of Virginia and completed my surgical training at Duke University
 in North Carolina. I am on staff at Tulane University Hospital. I have been
 performing laser vision correction since shortly after it received FDA approval in
