--- a/technology.html
+++ b/technology.html
@@ -84,12 +84,12 @@
 
 			  <img src="images/visx_green.jpg" class="floatRight techimg" />
 
-			  <p class="autop">This excimer laser system is the latest generation of VISX technology. It incorporates many new and exciting technology features:</p>
+			  <p class="autop">This excimer laser system is the latest generation of VISX technology.</p>
 
 			  <ul class="cList">
-			    <li>The variable spot beam technology. This advancement allows the beam to range in size and shape so that the delivered energy is more custom to the patient's cornea.</li>
+			    <li>Used by the military for astronauts and fighter pilots</li>
 			    <li>3D active track allows the laser to follow the tiny motions of your eye instantaneously and automatically in all three dimensions. 3D active track repositions the laser to insure accuracy and it does not require you to hold your eye still like other non-tracking lasers so that you can relax during the treatment.</li>
-			    <li>VSS, variable spot scanning, is an exclusive VISX laser technology that allows a treatment area. This technology allows a blend zone that increases the total treatment zone by 51%. This can be very helpful in patients who have concerns about post surgical glare and halo.</li>
+
 			    <li>Iris Registration (IR), the first FDA-approved, fully automated, non-contact method of alignment of the CustomVue treatment to the corneal site. </li>
 			  </ul>
 			  <div class="clearBoth"></div>
@@ -101,9 +101,9 @@
 			  <p class="autop">The ultra-fast IntraLase FS laser uses an infrared light beam, generating 30,000 pulses per second, to prepare the intracorneal bed and create the corneal flap in the first step of LASIK.</p>
 
 			  <ul class="cList">
-			    <li>Using an "inside-out" process, the laser beam is precisely focused to a point within the cornea.</li>
+			    <li>Uses laser energy to create corneal flap, eliminating need for microkeratome (blade).</li>
 			    <li>The laser pulses then create thousands of microscopic bubbles which define the precise architecture of the intracorneal surface, as well as the distinct beveled edge of the resulting flap.</li>
-			    <li>From start to finish, the IntraLase process takes approximately 30 seconds.</li>
+			    <li>Allows customization of flap parameters such as depth, size, hinge location.</li>
 			  </ul>
 			  <div class="clearBoth"></div>
 
