remove unused css class

--- a/lasik.html
+++ b/lasik.html
@@ -52,7 +52,7 @@
     				<div id="navBar">
     					<ul>
 					  <li ><a href="index.html">Home</a></li>
-    						<li class="currentPage"><a href="lasik.html">About LASIK</a></li>
+    						<li><a href="lasik.html">About LASIK/PRK</a></li>
 						<li><a href="patientInfo.html">LASIK FAQS</a></li>
 						<li><a href="technology.html">LASIK Technology</a></li>
 						<li><a href="singerAndStaff.html">Dr. Singer &amp; Staff</a></li>
