--- a/aboutDrSinger.html
+++ b/aboutDrSinger.html
@@ -50,7 +50,7 @@
     				<span id="logoText">Jeffrey Singer, M.D., APMC</span>
     				<div id="navBar">
     					<ul>
-    						<li class="currentPage"><a href="index.html">Home</a></li>
+    						<li><a href="index.html">Home</a></li>
     						<li><a href="lasik.html">About LASIK</a></li>
 						<li><a href="patientInfo.html">LASIK FAQS</a></li>
 						<li><a href="technology.html">LASIK Technology</a></li>
