--- a/singerAndStaff.html
+++ b/singerAndStaff.html
@@ -53,7 +53,7 @@
     				<h1 id="subLogoText">Louisiana Laser Vision Correction</h1>
     				<div id="navBar">
     					<ul>
-    						<li class="currentPage"><a href="index.html">Home</a></li>
+    						<li><a href="index.html">Home</a></li>
     						<li><a href="lasik.html">About LASIK</a></li>
 						<li><a href="patientInfo.html">LASIK FAQS</a></li>
 						<li><a href="technology.html">LASIK Technology</a></li>
