change nav titles

--- a/singerAndStaff.html
+++ b/singerAndStaff.html
@@ -54,9 +54,9 @@
     				<div id="navBar">
     					<ul>
     						<li><a href="index.html">Home</a></li>
-    						<li><a href="lasik.html">About LASIK</a></li>
+    						<li><a href="lasik.html">About LASIK/PRK</a></li>
 						<li><a href="patientInfo.html">LASIK FAQS</a></li>
-						<li><a href="technology.html">LASIK Technology</a></li>
+						<li><a href="technology.html">LASIK/PRK Technology</a></li>
 						<li><a href="singerAndStaff.html">Dr. Singer &amp; Staff</a></li>
 						<li><a href="cataracts.html">Cataract Surgery</a></li>
     						
