--- a/patientInfo.html
+++ b/patientInfo.html
@@ -48,6 +48,7 @@
     				</span>
     				<div id="logo"><a href="index.html"><img src="./images/logo.png" alt="Dr. Singers Logo"></a></div>
     				<span id="logoText">Jeffrey Singer, M.D., APMC</span>
+				<h1 id="subLogoText">Louisiana Laser Vision Correction</h1>
     				<div id="navBar">
     					<ul>
     						<li><a href="index.html">Home</a></li>
