urls were messed up somehow

--- a/aboutDrBrint.html
+++ b/aboutDrBrint.html
@@ -71,7 +71,7 @@
     					<div id="financing"><a href="https://www.carecredit.com/apply/confirm.html?light=1&encm=VTRXbgZkUzZWagxoBjMLYlZmUTECZwA3DmsDM1cyU24%3D" alt="care cred financing"><img src="./images/carecred.gif" alt="Care Cred Financing" /></a></div>
     				<div id="featureArea">
 
-				   <iframe width="560" height="315" src="http://www.youtube.com/embed/FeK5xRMc7hw?rel=0&amp;loop=1&amp;playlist=FeK5xRMc7h" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+				    <iframe width="560" height="315" src="http://www.youtube.com/embed/FeK5xRMc7hw?rel=0&amp;loop=1&amp;playlist=FeK5xRMc7hw" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 
 				</div>
     			</div>
@@ -113,7 +113,7 @@
     				</div>
  					<div id="footerVideoWrapper">
     				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana LASIK Leader</h1>
-    				 <iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w?rel=0&amp;loop=1&amp;playlist=T0PsAuUJG7" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+    				  <iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w?rel=0&amp;loop=1&amp;playlist=T0PsAuUJG7w" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
     				<div id="footerVideo"></div>
     				</div>
     				<div id="footerOfficesWrapper">
