--- a/singerAndStaff.html
+++ b/singerAndStaff.html
@@ -224,7 +224,7 @@ Dr. Singer and his associate will always be available for any eye problems you m
     				</div>
  					<div id="footerVideoWrapper">
     				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana LASIK Leader</h1>
-    				 <div id="footerVideo"><iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w?rel=0&amp;loop=1&amp;playlist=T0PsAuUJG7" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
+    				  <div id="footerVideo"><iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w?rel=0&amp;loop=1&amp;playlist=T0PsAuUJG7w" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
 
     				</div>
     				<div id="footerOfficesWrapper">
