make other paras red

--- a/lasik.html
+++ b/lasik.html
@@ -102,7 +102,7 @@ Singer's office lasting approximately five to ten minutes.</p>
 
 <h4>Compare</h4>
 
-<p class="autop">Find out the level of experience of the surgeon and their results.  You should also meet with Dr. Singer prior to surgery to discuss the risks and benefits as they apply to you.</p>
+<p class="autop benefit">Find out the level of experience of the surgeon and their results.  You should also meet with Dr. Singer prior to surgery to discuss the risks and benefits as they apply to you.</p>
 
 <p class="autop benefit">Dr. Singer is one of the highest volume LASIK surgeons in the country. He has the
 experience to assess patients ocular conditions and visual needs to determine who is an ideal
@@ -112,7 +112,7 @@ suggest alternatives to laser vision correction.</p>
 
 <h4>Evaluate Cost</h4>
 
-<p class="autop">Your decision should not be based solely on cost.  Although cost is important you need to determine what is included or not included in the quoted price.  Don't let yourself be surprised by hidden or additional fees.</p>
+<p class="autop benefit">Your decision should not be based solely on cost.  Although cost is important you need to determine what is included or not included in the quoted price.  Don't let yourself be surprised by hidden or additional fees.</p>
 
 <p class="autop benefit">Dr. Singer has a surgery facility in his office which offers the best value because no
 additional facility fee is needed. Most other surgeons have to pay separate surgical center
@@ -121,7 +121,7 @@ must charge for surgery.</p>
 
 <h4>Education</h4>
 
-<p class="autop">Educate yourself on the procedure so you feel comfortable with both the surgeon and the surgery.  Ask for references from patients who have had LASIK surgery.</p>
+<p class="autop benefit">Educate yourself on the procedure so you feel comfortable with both the surgeon and the surgery.  Ask for references from patients who have had LASIK surgery.</p>
 
 <p class="autop benefit">Checking references is crucial. The best way to check references is to speak to someone
 who has already had LASIK, and ask about their experience and who performed their surgery.
@@ -129,13 +129,13 @@ Check out Dr. Singer’s FACEBOOK page to see what his</p>
 
 <h4>Technology</h4>
 
-<p class="autop">Check to make sure your surgeon uses the latest laser with the most current technology available.</p>
+<p class="autop benefit">Check to make sure your surgeon uses the latest laser with the most current technology available.</p>
 
 <p class="autop benefit">Dr. Singer uses the latest technology available anywhere.</p>
 
 <h4>Comfort Level</h4>
 
-<p class="autop">You should feel comfortable with the surgeon, staff and surgery center.  Make sure all your questions and concerns are answered since you are trusting these individuals with your sight!  It is important to meet with your surgeon prior to scheduling surgery so your specific and individual needs can be discussed.</p>
+<p class="autop benefit">You should feel comfortable with the surgeon, staff and surgery center.  Make sure all your questions and concerns are answered since you are trusting these individuals with your sight!  It is important to meet with your surgeon prior to scheduling surgery so your specific and individual needs can be discussed.</p>
 
 <p class="autop benefit">Dr. Singer is committed to providing you with the best possible care so you will have the
 best possible result and refer your friends and family members.</p>
