--- a/lasik.html
+++ b/lasik.html
@@ -240,9 +240,7 @@ correctable with LASIK.</li>
 rare, may occur. This will be fully explained by Dr. Singer during your evaluation.</li>
 </ul>
 
-<h2>CONSENT FOR BILATERAL SIMULTANEOUS LASIK</h2>
-
-<h4><a href="LASIKConsent.pdf">Printable version</a></h4>
+<h2>CONSENT FOR BILATERAL SIMULTANEOUS LASIK (<a href="LASIKConsent.pdf">Printable version</a>)</h2>
 
 <h3>Introduction</h3>
 
