--- a/patientInfo.html
+++ b/patientInfo.html
@@ -108,9 +108,9 @@ consents.</p>
 
 <li>Traditional PRK ($799/eye)</li>
 
-<li>Wavefront LASIK (Custom LASIK) - additional $300 per eye READ MORE BELOW</li>
+<li>Wavefront LASIK/PRK (Custom LASIK) - additional $300 per eye READ MORE BELOW</li>
 
-<li>IntraLASIK (Blade-less LASIK) - additional $500 per eye READ MORE BELOW</li>
+<li>IntraLASIK/PRK (Blade-less LASIK) - additional $500 per eye READ MORE BELOW</li>
 </strong>
 </ul>
 
