--- a/prk.html
+++ b/prk.html
@@ -89,8 +89,6 @@
 
 <h3>SURFACE TREATMENTS (PRK)</h3>
 
-<p class="autop">The first technique which can be called "surface treatment" as the laser affects the surface of the cornea directly, involves the gentle removal of the outer skin-like layer of cells called the epithelium, exposing the tissue below which then receives the laser. After the treatment there is a period of about 5 days when the eyes are uncomfortable, tender and watery with blurry vision as the epithelium grows back and the eye surface heals. The original name of this technique is Photorefractive Keratectomy or PRK and is the longest established laser technique with over 20 years follow up, stable long term results and is extremely safe.  Many people also refer to PRK as ASA (Advanced Surface Ablation)</p>
-
 <div class="clearBoth">&nbsp;</div>
 
 <div class="floatLeft" style="text-align: center; background: white;max-width: 355px;">
@@ -100,13 +98,16 @@
   </span>
 </div>
 
+<p class="autop">The first technique which can be called "surface treatment" as the laser affects the surface of the cornea directly, involves the gentle removal of the outer skin-like layer of cells called the epithelium, exposing the tissue below which then receives the laser. After the treatment there is a period of about 5 days when the eyes are uncomfortable, tender and watery with blurry vision as the epithelium grows back and the eye surface heals. The original name of this technique is Photorefractive Keratectomy or PRK and is the longest established laser technique with over 20 years follow up, stable long term results and is extremely safe.  Many people also refer to PRK as ASA (Advanced Surface Ablation)</p>
+
+
 <p class="autop">Epi-Lasik and LASEK are almost the same as PRK except both remove the epithelium in such a way (the former mechanically with a blunt instrument which slides across the eye, the latter with dilute alcohol which chemically loosens the tissue) that it can be replaced again afterwards. Some claim that by replacing the epithelium, recovery is more comfortable and may give better visual results especially with high prescriptions. These claims are controversial and not universally accepted, as tests have shown that the original epithelium tends to dissolve and is in any case replaced by fresh epithelium growing in.</p>
 
 <p class="autop">The safety and ultimate vision are the same for all surface techniques- excellent . </p>
 
-<h3>UNDER A FLAP TREATMENTS (LASIK)</h3>
+<div class="clearBoth">&nbsp;</div>
 
-<p class="autop">The second group of techniques used in laser vision correction involves cutting the cornea, and raising about 20% of the corneal thickness as a flap on a hinge- and more invasive and complicated procedure. The big advantage is that as the laser treatment is under the flap which is immediately replaced after the laser ablation, and not exposed as in the surface treatments, recovery is much quicker, most seeing well the next day with no discomfort beyond the first few hours. The average cornea is slightly more than half a millimetre thick in the centre (500microns) and the flap is usually between 100-160 microns in thickness, which is folded back on a hinge of uncut cornea (see diagram).</p>
+<h3>UNDER A FLAP TREATMENTS (LASIK)</h3>
 
 <div class="clearBoth">&nbsp;</div>
 
@@ -116,6 +117,8 @@
     LASIK. Side view of eye with partial thickness corneal flap raised, laser performed on the exposed surface underneath, and flap replaced (figures top to bottom)
   </span>
 </div>
+
+<p class="autop">The second group of techniques used in laser vision correction involves cutting the cornea, and raising about 20% of the corneal thickness as a flap on a hinge- and more invasive and complicated procedure. The big advantage is that as the laser treatment is under the flap which is immediately replaced after the laser ablation, and not exposed as in the surface treatments, recovery is much quicker, most seeing well the next day with no discomfort beyond the first few hours. The average cornea is slightly more than half a millimetre thick in the centre (500microns) and the flap is usually between 100-160 microns in thickness, which is folded back on a hinge of uncut cornea (see diagram).</p>
 
 <p class="autop">Most laser centres use an instrument called a microkeratome, which consists of a sharp oscillating and computerised blade that moves across the eye cutting the flap as it passes. This technique is called LASIK and is the most well known by today's laser candidates. It is also extremely safe, although on the very rare occasions that a problem occurs during laser vision correction treatments, it is usually connected with the flap.</p>
 
